--- a/catroid/src/main/res/values/strings.xml
+++ b/catroid/src/main/res/values/strings.xml
@@ -77,7 +77,9 @@
     <string name="nothing_to_rename">Nothing to rename</string>
     <string name="unpack_background">Program\'s background will be replaced</string>
     <string name="degrees">degrees</string>
-
+    <string name="landscape">Landscape</string>
+    <string name="portrait">Portrait</string>
+    <string name="unknown">unknown</string>
     <!--  -->
 
 
@@ -187,6 +189,14 @@
     <string name="deselect_all">Deselect all</string>
     <string name="backpack_replace_object">The object "%1$s" already exists in the backpack. Do you want to replace it?</string>
     <string name="backpack_replace_object_multiple">Objects already exist in the backpack. Do you want to replace them?</string>
+    <!--  -->
+
+
+    <!-- Project overview -->
+    <string name="author">Author:</string>
+    <string name="screen_size">Screen Size:</string>
+    <string name="mode">Mode:</string>
+    <string name="remix_of">Remix of:</string>
     <!--  -->
 
 
